--- a/gb/25/12/5/n14649325.md
+++ b/gb/25/12/5/n14649325.md
@@ -13,17 +13,17 @@
 <p>在一联串调查未登记外星人访地球记录时，K和J发现银河中的虫族正秘密的行动-刺杀另一星球的大使，并抢夺银河系的主控权，K和J必须在地球被毁灭前找到伪装成人类的虫族。K和J这对黑白搭档带着巨大无敌枪到处对付奇形怪状的外星人，结果却笑料百出。</p>
 <figure id="attachment_14649348" aria-describedby="caption-attachment-14649348" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/12/id14649348-20251205-mark-MyVideo02.jpg"><img decoding="async" class=" wp-image-14649348" src="https://i.epochtimes.com/assets/uploads/2025/12/id14649348-20251205-mark-MyVideo02-450x305.jpg" alt="" width="600" b="407" /></a><figcaption id="caption-attachment-14649348" class="wp-caption-text">《MIB星际战警》（Men in Black）剧照。（台湾大哥大MyVideo提供）</figcaption></figure>
 <p>第一部电影成功后开启了一个系列，2002年推出了续集，史密斯和琼斯再次主演；2012年推出了第三部，两人也继续出演。第四部《MIB星际战警：跨国行动》（Men in Black: International）于2019年上映，由克里斯?汉斯沃（Chris Hemsworth）和泰莎?汤普森（Tessa Thompson）主演，但这部电影反应不佳。</p>
-<p>在评分方面，美国网路电影资料库（IMDb）和影评网站“烂番茄”（Rotten Tomatoes）是评估电影好与不好的参考依据之一。IMDb满分为十分，截至今日，第一至第四部电影分别获得观众7.3、6.8、6.2和5.6的评分；烂番茄影评员分别给予91%、38%、67%及23%的新鲜度，分别获得观众评分80%、45%、70%及66%。</p>
+<p>在评分方面，美国网路电影资料库（IMDb）和影评网站“烂番茄”（Rotten Tomatoes）是评估电影好与不好的参考依据之一。IMDb满分为十分，截至今日，第一至第四部电影分别获得观众7.3、6.2、6.8和5.6的评分；烂番茄影评员分别给予91%、38%、67%及23%的新鲜度，分别获得观众评分80%、45%、70%及66%。</p>
 <p>《MIB星际战警》系列目前可在MyVideo等串流媒体上观看。</p>
 <figure id="attachment_14649345" aria-describedby="caption-attachment-14649345" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/12/id14649345-20251205-mark-MyVideo05.jpg"><img decoding="async" class=" wp-image-14649345" src="https://i.epochtimes.com/assets/uploads/2025/12/id14649345-20251205-mark-MyVideo05-450x266.jpg" alt="" width="600" b="354" /></a><figcaption id="caption-attachment-14649345" class="wp-caption-text">《MIB星际战警3》（Men in Black 3）剧照。（台湾大哥大MyVideo提供）</figcaption></figure>
 <p>责任编辑：苏漾</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/3/n10021983.md#1" target="_blank">杨宁：官司风波再起 红色舞剧洗脑没商量</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/11/4/n11633370.md#1" target="_blank">一趟印度之行 让她找到生命回归之路</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/4/n11234376.md#1" target="_blank">【征文】文宇：科举千年兴衰录（二）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/10/n11782021.md#1" target="_blank">读《转法轮》澳洲西人找到生命意义</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
